# smallbets.live

./: .firebaserc  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TESTING_STRATEGY.md  firebase.json  firestore.indexes.json  firestore.rules
backend/: .coveragerc  .env.example  Dockerfile  emulator-service-account.json  firebase_config.py  game_logic.py  main.py  pyproject.toml  pytest.ini  requirements.txt  start_dev.sh  transcript_parser.py
backend/models/: __init__.py  bet.py  bet_template.py  event_template.py  room.py  room_user.py  transcript.py  user.py  user_bet.py
backend/services/: __init__.py  automation_service.py  bet_service.py  room_service.py  template_service.py  transcript_service.py  user_service.py
backend/tests/: conftest.py  test_automation_service.py  test_bet_state_machine.py  test_concurrency.py  test_cors_config.py  test_data_integrity.py  test_env_setup.sh  test_game_logic.py  test_rate_limiter.py  test_security.py  test_template_service.py  test_tournament_game_logic.py  test_transcript_parser.py
backend/tests/test_api/: __init__.py  test_room_endpoints.py  test_tournament_endpoints.py  test_transcript_endpoints.py  test_user_link_endpoints.py
backend/tests/test_firestore_integration/: __init__.py  test_bet_service_integration.py  test_room_service_integration.py
backend/tests/test_models/: __init__.py  test_bet_model.py  test_bet_undo.py  test_room_model.py  test_room_tournament.py  test_room_user_model.py  test_user_bet_model.py  test_user_key.py  test_user_model.py
backend/tests/test_services/: __init__.py  (+5 more)
specs/: SPEC.md  (+4 more)
(+98 files in other folders)
