[project]
name = "smallbets-backend"
version = "0.0.1"
description = "SmallBets.live backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "pydantic==2.6.1",
    "firebase-admin==6.4.0",
    "python-dotenv==1.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]
